# amazon-spapi

./: .gitignore  Cargo.toml  README.md
docs/aplus_content_2020_11_01/: AplusContentApi.md  AplusPaginatedResponse.md  AplusResponse.md  AsinBadge.md  AsinMetadata.md  ColorType.md  ContentBadge.md  ContentDocument.md  ContentMetadata.md  ContentMetadataRecord.md  ContentModule.md  ContentModuleType.md  ContentRecord.md  ContentStatus.md  ContentType.md  Decorator.md  DecoratorType.md  ErrorList.md  GetContentDocumentResponse.md  ImageComponent.md  ImageCropSpecification.md  ImageDimensions.md  ImageOffsets.md  ListContentDocumentAsinRelationsResponse.md  ParagraphComponent.md  PositionType.md  PostContentDocumentApprovalSubmissionResponse.md  PostContentDocumentAsinRelationsResponse.md  PostContentDocumentRequest.md  PostContentDocumentResponse.md  PostContentDocumentSuspendSubmissionResponse.md  PublishRecord.md  SearchContentDocumentsResponse.md  SearchContentPublishRecordsResponse.md  StandardCompanyLogoModule.md  StandardComparisonProductBlock.md  StandardComparisonTableModule.md  StandardFourImageTextModule.md  StandardFourImageTextQuadrantModule.md  StandardHeaderImageTextModule.md  (+20 more)
docs/app_integrations_2024_04_01/: AppIntegrationsApi.md  CreateNotificationRequest.md  CreateNotificationResponse.md  DeleteNotificationsRequest.md  RecordActionFeedbackRequest.md
docs/application_2023_11_30/: ApplicationsApi.md  ErrorList.md
docs/awd_2024_05_09/: Address.md  AwdApi.md  CarrierCode.md  CarrierCodeType.md  DestinationDetails.md  DimensionUnitOfMeasurement.md  DistributionPackage.md  DistributionPackageContents.md  DistributionPackageQuantity.md  DistributionPackageType.md  Error.md  ErrorList.md  ExpirationDetails.md  InboundEligibility.md  InboundEligibilityStatus.md  InboundOrder.md  InboundOrderCreationData.md  InboundOrderReference.md  InboundPackages.md  InboundPreferences.md  InboundShipment.md  InboundShipmentStatus.md  InboundShipmentSummary.md  InboundStatus.md  InventoryDetails.md  InventoryListing.md  InventoryQuantity.md  InventorySummary.md  InventoryUnitOfMeasurement.md  LabelOwner.md  LabelStatus.md  MeasurementData.md  OrderIneligibilityReason.md  PackageDimensions.md  PackageVolume.md  PackageWeight.md  PrepCategory.md  PrepDetails.md  PrepInstruction.md  (+12 more)
examples/: fba_inventory_v1.rs  pricing_v0.rs  product_fees_v0.rs  rate_limiter.rs  rate_limiter_safety_factor.rs  rate_limiter_test.rs  reports.rs  sellers_v1.rs  sellers_v1_use_raw_api.rs  update_price.rs
src/: lib.rs
(+3185 files in other folders)
